--- a/themes/pfe_pixyll/layouts/page/single.html
+++ b/themes/pfe_pixyll/layouts/page/single.html
@@ -1,7 +1,7 @@
 {{ partial "head.html" . }}
 <div class="site-wrap">
   {{ partial "header.html" . }}
-  <div class="post p2 p-responsive wrap" role="main">
+  <div class="post p2 p-responsive wrap" role="main" style="padding-top: 0 !important">
     <div class="measure">
       <div class="post-header mb2">
         <h1 class="py2">{{ .Title }}</h1>
