--- a/themes/pfe_pixyll/layouts/post/single.html
+++ b/themes/pfe_pixyll/layouts/post/single.html
@@ -1,7 +1,7 @@
 {{ partial "head.html" . }}
 <div class="site-wrap">
   {{ partial "header.html" . }}
-  <div class="post p2 p-responsive wrap" role="main">
+  <div class="post p2 p-responsive wrap" role="main"  style="padding-top: 0 !important">
     <div class="measure">
       <div class="post-header mb2">
         <h1 class="py2">{{ .Title }}</h1>
@@ -16,7 +16,7 @@
       <p class="post-meta">{{ i18n "tags" }}:&nbsp;
         {{ range $i, $e := .Params.tags }}
             {{if $i}},&nbsp;{{end}}
-            <a href="{{ $baseurl }}{{ $.Site.LanguagePrefix }}/tags/{{ . }}">{{ . }}</a>
+            <a href="{{ $baseurl }}{{ $.Site.LanguagePrefix }}/tags/{{ . }}" style="color: #1980d2 !important">{{ . }}</a>
         {{ end }}
       </p>
 
