--- a/themes/pfe_pixyll/layouts/post/summary.html
+++ b/themes/pfe_pixyll/layouts/post/summary.html
@@ -1,14 +1,14 @@
-<div class="post">
+<div class="post" style="margin-bottom: 2rem !important; padding-bottom: 0 !important;">
   <a class="post-link" href="{{ .Permalink }}">
   <!-- <p class="post-meta left">{{ .Date.Format "January 2, 2006" }}</p> -->
   <div class="clearfix"></div>
-  <h3 class="h2 post-title">{{ .Title }} {{ if .Draft }}(draft){{end}}</h3>
+  <h3 class="h2 post-title" >{{ .Title }} {{ if .Draft }}(draft){{end}}</h3>
   <p class="post-summary" style="text-align: justify !important; text-align-last: left !important;">{{ .Summary }}</p>
   </a>
   {{ $baseurl := .Site.BaseURL }}
-  <p class="post-meta">{{ i18n "tags" }}:&nbsp;
+  <!-- <p class="post-meta">{{ i18n "tags" }}:&nbsp;
   {{ range $i, $e := .Params.tags }}
       {{if $i}},&nbsp;{{end}}
       <a href="{{ $baseurl }}{{ $.Site.LanguagePrefix }}/tags/{{ . }}">{{ . }}</a>
-  {{ end }}</p>
+  {{ end }}</p> -->
 </div>
